# workflow

./: README.md  pyproject.toml
aiwf/: __main__.py  capture.py  cli.py  config.py  db.py  models.py  papers.py  remote.py  review.py  tasks.py  utils.py
scripts/: install_onekey_capture.sh  wf_capture_current.sh
