[project]
name = "aiwf"
version = "0.1.0"
description = "All-in-one AI workflow terminal for knowledge capture and multi-model routing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
aiwf = "aiwf.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiwf*"]

